# aiot_robot_project

./: .gitignore  README.md
project_byun/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project_byun/install/turtle_byun/lib/turtle_byun/: test_01
project_byun/install/turtle_byun/share/turtle_byun/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
project_byun/log/: latest_build
project_byun/src/turtle_byun/: package.xml  setup.cfg  setup.py
project_byun/src/turtle_byun/turtle_byun/: box_detector.py
project_jang/src/: 스크린캐스트 2024년 12월 18일 11시 41분 36초.webm
project_jang/src/omx_moveit/: .setup_assistant  CMakeLists.txt  omx_moveit.xml  package.xml
project_jang/src/omx_moveit/config/: hardware.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  open_manipulator_x.ros2_control.xacro  open_manipulator_x.srdf  open_manipulator_x.urdf.xacro  ros2_controllers.yaml
project_jang/src/omx_moveit/controller/: omx_arm_controller.cpp  omx_controller.cpp  omx_gripper_controller.cpp
project_jang/src/omx_moveit/controller/include/omx_moveit/: omx_arm_controller.hpp  omx_controller.hpp  omx_gripper_controller.hpp
project_jang/src/omx_moveit/hardware/: omx_hardware.cpp
project_jang/src/omx_moveit/hardware/include/omx_moveit/: omx_hardware.hpp
project_jang/src/omx_moveit/launch/: bringup.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
project_jang/src/omx_moveit/scripts/: object_dection.py  object_detection.py  object_detection_aruco.py
project_jang/src/omx_moveit/src/: drop.cpp  pick_and_place.cpp  pickup.cpp  robot_execute.cpp
project_jang/src/omx_moveit/urdf/: open_manipulator_x.urdf.xacro
project_lee/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project_lee/install/turtle_lee/share/turtle_lee/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
project_lee/log/: latest_build
project_lee/src/turtle_lee/: package.xml  setup.cfg  setup.py
project_lee/src/turtle_lee/turtle_lee/: GUI.py  motor.py
project_shin/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.6
project_shin/install/chomp_motion_planner/share/chomp_motion_planner/: package.sh
project_shin/install/launch_param_builder/share/launch_param_builder/: package.sh
project_shin/install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.6
project_shin/install/moveit_chomp_optimizer_adapter/share/moveit_chomp_optimizer_adapter/: package.sh
project_shin/install/moveit_common/share/moveit_common/: package.sh
project_shin/install/moveit_configs_utils/share/moveit_configs_utils/: package.sh
project_shin/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.6  libmoveit_butterworth_filter.so.2.5.6  libmoveit_collision_detection.so.2.5.6  libmoveit_collision_detection_bullet.so.2.5.6  libmoveit_collision_detection_fcl.so.2.5.6  libmoveit_collision_distance_field.so.2.5.6  libmoveit_constraint_samplers.so.2.5.6  libmoveit_distance_field.so.2.5.6  libmoveit_dynamics_solver.so.2.5.6  libmoveit_exceptions.so.2.5.6  libmoveit_kinematic_constraints.so.2.5.6  libmoveit_kinematics_metrics.so.2.5.6  libmoveit_planning_interface.so.2.5.6  libmoveit_planning_request_adapter.so.2.5.6  libmoveit_planning_scene.so.2.5.6  libmoveit_robot_model.so.2.5.6  libmoveit_robot_state.so.2.5.6  libmoveit_robot_trajectory.so.2.5.6  libmoveit_smoothing_base.so.2.5.6  libmoveit_test_utils.so.2.5.6  libmoveit_trajectory_processing.so.2.5.6  libmoveit_transforms.so.2.5.6  libmoveit_utils.so.2.5.6
project_shin/install/moveit_core/share/moveit_core/: local_setup.sh  package.sh
project_shin/install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.6  libmoveit_cached_ik_kinematics_plugin.so.2.5.6  libmoveit_lma_kinematics_plugin.so.2.5.6  libmoveit_srv_kinematics_plugin.so.2.5.6
project_shin/install/moveit_kinematics/lib/moveit_kinematics/: benchmark_ik  test_kinematics_plugin
project_shin/install/moveit_kinematics/share/moveit_kinematics/: local_setup.sh  package.sh
project_shin/install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.6
project_shin/install/moveit_planners_chomp/share/moveit_planners_chomp/: package.sh
project_shin/install/moveit_plugins/share/moveit_plugins/: local_setup.sh  package.sh
project_shin/install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.5.6  libmoveit_ros_control_interface_gripper_plugin.so.2.5.6  libmoveit_ros_control_interface_plugin.so.2.5.6  libmoveit_ros_control_interface_trajectory_plugin.so.2.5.6
project_shin/install/moveit_ros_occupancy_map_monitor/lib/: libmoveit_ros_occupancy_map_monitor.so.2.5.6
project_shin/install/moveit_ros_planning/lib/: libmoveit_collision_plugin_loader.so.2.5.6  libmoveit_constraint_sampler_manager_loader.so.2.5.6  libmoveit_cpp.so.2.5.6  libmoveit_default_planning_request_adapter_plugins.so.2.5.6  libmoveit_kinematics_plugin_loader.so.2.5.6  libmoveit_plan_execution.so.2.5.6  libmoveit_planning_pipeline.so.2.5.6  libmoveit_planning_scene_monitor.so.2.5.6  libmoveit_rdf_loader.so.2.5.6  libmoveit_robot_model_loader.so.2.5.6  libmoveit_trajectory_execution_manager.so.2.5.6
project_shin/install/moveit_ros_robot_interaction/lib/: libmoveit_robot_interaction.so.2.5.6
project_shin/install/moveit_simple_controller_manager/lib/: libmoveit_simple_controller_manager.so.2.5.6
project_shin/install/srdfdom/lib/: libsrdfdom.so.2.0.7
project_shin/log/: latest_build
project_shin/robot_arm_camera/src/robot_arm_camera/: package.xml  setup.cfg  setup.py
project_shin/robot_arm_camera/src/user_interface/: CMakeLists.txt  package.xml
project_shin/robot_arm_camera/src/user_interface/action/: Bool.action
project_shin/robot_arm_camera/src/user_interface/srv/: AddAndOdd.srv  ArithmeticOperator.srv
(+57 files in other folders)
